--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index3.js"></script>
-
+    index2.html
+    
+    <script src="index3.js"></script>    
 </body>
 </html>
