--- a/index4.html
+++ b/index4.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    index3.html
     
-    <script src="index3.js"></script>    
+    index4
+    <script src="index4.js"></script>
 </body>
 </html>
